
5.2a2 -> 5.2a3:
    - jbj: transFlags: regroup bits together in poptI table.
    - jbj: transFlags: use POPT_SET_BIT consistently, no callbacks needed.
    - jbj: transFlags: add --nopretrans/--noposttrans disablers.
    - jbj: lua: disable embedded socket/crypto/xmlrpc modules. external instead.
    - jbj: sketch in %remove file flag, surely gonna change before finished.
    - jbj: transFlags: eliminate --nomd5, use --nofdigests instead.
    - jbj: sketch in arbitrary per-package Transflags: tag.
    - jbj: transFlags: add RPMTRANS_FLAGS_NORPMDB and --norpmdb disablers.
    - jbj: transFlags: eliminate (never implemented) RPMTRANS_KEEP_OBSOLETES.
    - jbj: python: remove compile warnings from rpmWriteHeaders() addition.
    - afb: rpmrepo: fix installed size bug (wrong value being written)
    - pixel: handle posttrans p with no body.
    - proyvind: python: add writeHeaderListToFD() & writeHeaderListToFile().
	(improved version of TurboLinux patch)
    - proyvind: rpm4compat: disable warnings about unused variables.
    - proyvind: Mandriva: Always treat file conflicts during install (rpm -i)
	 as errors. (dont-filter-install-file-conflicts)
    - proyvind: perl: clean out some mess.
    - proyvind: perl: don't add rpath to module.
    - proyvind: lua: fix linking against internal lua.
    - jbj: perl: add a sentinel to rpmdsSingle() rather than exporting rpmdsDup().
    - jbj: fix: better choice for paths to add (#473814 comment #4).
    - proyvind: perl: add api doc for RPM::Spec->icon() & RPM::Spec->icon_url().
    - jbj: fix: include build dirname to find multiple *.pc (#473814).
    - proyvind: perl: always do initSourceHeader() (fixes RPM::Spec->srcheader()
	& RPM::SPEC->check()).
    - jbj: lua: inline a copy of getdate.c
    - jbj: lua: change paths to extend lua with external modules on linux.
    - jbj: WR: lua: display "rpm:lua:foo" progname w chkconfig/useradd/groupadd
	errors.